tests/golden/type_errors/map_values_member_non_map.err
Type error at 1:12: values expects map receiver, got [number]
  [1].values();
             ^
